optimized public/js files

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,7 +8,7 @@
 </div>
 <script>
   document.getElementById('signup').addEventListener('click',()=>{
-    window.location.replace('/setupacc')
+    window.location.replace('/signup')
   });
 
   document.getElementById('signin').addEventListener('click',()=>{
