--- a/views/partials/chooseBtn.handlebars
+++ b/views/partials/chooseBtn.handlebars
@@ -2,31 +2,4 @@
   <button id="generateNextBtn" class="btn btn-danger text-black rounded-pill p-2 my-2 px-4 mx-2">Opps Sorry :(</button>
   <button id="likeBtn" class="btn bg-success text-black rounded-pill px-4 p-2" data-user2Id="{{user.id}}">It feels right :)</button>
 </div>
-
-
-<script>
-  document.getElementById('generateNextBtn').addEventListener('click',()=>{
-    window.location.replace('/people')
-  })
-  const likeBtn =document.getElementById('likeBtn')
-  const userId2 = likeBtn.getAttribute("data-user2Id")
-  likeBtn.addEventListener('click',()=>{
-   fetch('/api/users/add-likes',{
-     method:'POST',
-     headers:{
-       'Content-Type': 'application/json'
-     },
-     body: JSON.stringify({
-       userId2
-     })
-     
-   })
-   .then(response =>console.log(response))
-   .catch( err => console.log(err))
-    window.location.replace('/people')
-
-   })
-
-  console.log(likeBtn.getAttribute("data-user2Id"))
-
-</script>
+<script src="../../js/addLikesOrNext.js"></script>
