--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -4,10 +4,10 @@
   </div>
   <div class="d-flex flex-row">
     <h4 id="viewSingleBtn"class="btn me-4 fs-3">
-      <a class="text-danger text-decoration-none" href ="/people">Find Singles</a>
+      <a class="text-danger text-decoration-none" href ="/page/users-page">Find Singles</a>
     </h4>
     <h4 id="pageBtn"class="btn me-4 text-danger fs-3"> 
-      <a class="text-danger text-decoration-none" href ="/mypage">My Page</a>
+      <a class="text-danger text-decoration-none" href ="/page/mypage">My Page</a>
     </h4>
     <!-- If the user is logged in, show a logout button -->
     {{#if session.loggedIn}}
@@ -24,7 +24,5 @@
 
 
 {{#if session.loggedIn}}
-<script src="./js/logout.js"> </script>
-
-
+<script src="/js/logout.js"> </script>
 {{/if}}
