--- a/views/personal-page.handlebars
+++ b/views/personal-page.handlebars
@@ -2,7 +2,7 @@
 <div class="d-flex flex-column flex-md-row justify-content-lg-center align-items-center rounded bg-danger text-white bg-opacity-50 p-2 fs-5">
   <div class="col-4 d-flex flex-column align-items-center">
     <div class="m-2"><img src="{{user.image}}" alt="{{user.name}}" width= "200" height="250"></div>
-    {{>addPersonalInfo}}
+    {{>addHobbies}}
   </div>
 
   <div class="col-8 d-flex flex-column align-items-center mb-3 mt-3">
@@ -39,59 +39,7 @@
 
 
 </div>
-{{!-- <div class="container-sm d-flex flex-colum rounded bg-danger text-white bg-opacity-50 ">
-  <div><h2>People that you like</h2></div>
-    {{#each user.likes}}
-  <div>{{name}}</div>
-  <div class="m-2"><img src="{{image}}" width= "150" height="150"></div>
-     {{/each}}
-</div> --}}
 
 
   
 
-<script>
-  //add hobby for current login user
-  const form = document.getElementById('add-post')
-  const storyInput = document.querySelector('.story')
- 
-  form.addEventListener('submit', e =>{
-  e.preventDefault()
-  const data = {
-  story: storyInput.value
-    }
-    fetch('/api/users/add-story', {
-      method: 'POST',
-      headers: {
-        'Content-Type': 'application/json'
-      },
-      body: JSON.stringify(data)
-    })
-      .then(response => console.log(response))
-    
-      .catch(err => console.log(err))
-  })
-  
-  //delete hobby
-  const hobbyElements= document.getElementsByClassName('hobby')
-  for (var i=0; i<hobbyElements.length; i++){
-    const id = hobbyElements[i].getAttribute("data-hobby-id")
-    hobbyElements[i].addEventListener('click',(e)=>{
-      fetch('/api/users/delete-hobby',{
-        method:'DELETE',
-        headers:{
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({
-          id: id,
-        })
-      })
-      .then(response => {
-        e.target.remove()
-
-      })
-    })
-    
-  }
-
-</script>
