finished link of like's person in mypage

--- a/views/hobbies.handlebars
+++ b/views/hobbies.handlebars
@@ -12,12 +12,6 @@
   </ul>
 </div>
 <div>
-<a class=" text-black text-decoration-none fs-3 fw-bold" href="/mypage">NEXT</a>></button>
+<a class=" text-black text-decoration-none fs-3 fw-bold" href="/page/mypage">NEXT</a>></button>
 </div>
-
-<style>
-  .selected {
-    background:#8f1823 !important;
-
-  }
-</style>
+<script src="../js/add-hobbies.js"></script>
