finished signup/signin

--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,6 +1,6 @@
 <nav class="d-flex  flex-column flex-md-row justify-content-md-between text-danger align-items-center">
   <div class="title d-flex fw-bold ">
-    <h2>Soul Match</h2>
+    <h2>soulMatch</h2>
   </div>
   <div class="d-flex flex-row">
     <h4 id="viewSingleBtn"class="btn me-4 fs-3">
