--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,19 +1,23 @@
 {{>header}}
-<form class="form login-form d-flex flex-column bg-danger text-white bg-opacity-50 py-2 fs-5">
-  <div class="">
-    <p>Let's Sign In</p>
+<div class="card flex flex-column bg-danger text-black bg-opacity-50 mx-5 py-2 fs-5 align-self-center">
+  <h3 class="card-header text-dark border-0 bg-transparent">Let's Sign In</h3>
+  <div class="mx-4">
+    <form class="form login-form  d-flex flex-column p-4">
+      <div class="d-flex flex-column align-self-center">
+        <label for="name">Email:</label>
+        <input class="form-input t align-self-center" type="text" id="email-Login" />
+      </div>
+      <div class="d-flex flex-column align-self-center">
+        <label for="password-login">Password:</label>
+        <input class="form-input align-self-center" type="password" id="password-Login" />
+      </div>
+      <button id="logInBtn" class="btn btn-danger badge bg-danger text-wrap rounded-pill align-self-center mt-3 mb-3">Sign In</button>
+     
+    </form>
+
   </div>
-  <div class="form-group form-group-to-center">
-    <label for="name">Email:</label>
-    <input class="form-input border-top-0 border-start-0 border-end-0 bg-transparent centered-form-input p-1" type="text" id="email-Login" />
-  </div>
-  <div class="form-group mb-3 form-group-to-center">
-    <label for="password-login">Password:</label>
-    <input class="form-input border-top-0 border-start-0 border-end-0 bg-transparent centered-form-input p-1" type="password" id="password-Login" />
-  </div>
-  <div>
-    <button id="logInBtn" class="btn btn-danger badge bg-danger text-wrap rounded-pill mb-3">Sign In</button>
-  </div>
-</form>
+  
+</div>
+
 
 <script src="./js/login.js"></script>
