--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,24 +1,24 @@
-{{>navbar}}
-<form class="form login-form d-flex flex-column bg-danger text-white bg-opacity-50 py-2 fs-5">
-  <div class="">
-    <p>Let's setup an account with us</p>
-  </div>
-  <div class="form-group form-group-to-center">
-    <label for="name">What's your name?</label>
-    <input class="form-input border-top-0 border-start-0 border-end-0 centered-form-input p-1" type="text" id="name" />
-  </div>
-  
-  <div class="form-group form-group-to-center">
-    <label for="name">Email:</label>
-    <input class="form-input border-top-0 border-start-0 border-end-0 centered-form-input p-1" type="text" id="email-login" />
-  </div>
-  <div class="form-group form-group-to-center">
-    <label for="name">Password <small>(at least 8 charaters)</small></label>
-    <input class="form-input border-top-0 border-start-0 border-end-0 centered-form-input p-1" type="password" id="password-login" />
-  </div>
-  <div>
-    <button id="signUpBtn" class="btn badge text-wrap rounded-pill mb-3">That's It</button>
+{{>header}}
+<div class="card flex flex-column bg-danger text-black bg-opacity-50 mx-5 py-2 fs-5 align-self-center">
+  <h3 class="card-header text-dark border-0 bg-transparent">Let's setup an account with us</h3>
+  <div class="mx-4">
+    <form class="form-group d-flex flex-column p-4">
+      <div class="d-flex flex-column align-self-center">
+        <label class="form-label" for="name">What's your name?</label>
+        <input class="form-input align-self-center" type="text" id="name"/>
+      </div>
+      <div class="d-flex flex-column align-self-center">
+        <label for="name">Email:</label>
+        <input class="form-input align-self-center" type="text" id="email-login" />
+      </div>
+      <div class="d-flex flex-column align-self-center">
+        <label for="name">Password <small>(at least 8 charaters)</small></label>
+        <input class="form-input align-self-center" type="password" id="password-login" />
+      </div>
+      <button id="signUpBtn" class="btn btn-danger badge bg-danger text-wrap rounded-pill  align-self-center mt-3 mb-3">Sign Up</button>
+    </form>
   </div>
 
-</form>
+</div>
+
 <script src="/js/signup.js"></script>
