--- a/views/personal-page.handlebars
+++ b/views/personal-page.handlebars
@@ -1,17 +1,17 @@
 {{>navbar}}
 <div class="d-flex flex-column flex-md-row justify-content-lg-center align-items-center rounded bg-danger text-white bg-opacity-50 p-2 fs-5">
   <div class="col-4 d-flex flex-column align-items-center">
-    <div id="user" class="m-2"><img src="{{user.image}}" alt="{{user.name}}" width= "200" height="250"></div>
+    <div id="user" class="m-2"><img src="{{user.image}}." alt="{{user.name}}" width= "200" height="250"></div>
     {{>addHobbies}}
   </div>
 
   <div class="col-8 d-flex flex-column align-items-center mb-3 mt-3">
-    <div id ="nameBtn" class="btn btn-warning rounded-pill text-black mb-3"><h2>{{user.name}}</h2></div>
+    <div id ="nameBtn" class="btn btn-info rounded-pill text-black mb-3"><h2>{{user.name}}</h2></div>
     <div>
       <p class="fw-bold text-black">What make me the most happiest</p>
     </div>
     {{#each user.hobbies}}
-    <div class="btn hobby bg-secondary text-white rounded-pill my-2 px-4 py-2 mb-3" data-hobby-id="{{id}}">{{name}}</div>
+    <div class="btn hobby bg-warning text-black rounded-pill my-2 px-4 py-2 mb-3" data-hobby-id="{{id}}">{{name}}</div>
     {{/each}}
     <div>
       <p class="fw-bold text-black">Something about me</p>
@@ -33,13 +33,14 @@
       <div class="mx-2 my-2"><img src="{{image}}" width= "150" height="150"></div>
       <div class="mx-2 mb-5 fw-bold">
 
-      <a href="/page/users-page/{{id}}">{{name}}</a>
+      <a class="text-decoration-none text-black" href="/page/users-page/{{id}}">{{name}}</a>
       </div>
     </div>
     
     {{/each}}
   </div>
 </div>
+<script src="/js/add-story.js"></script>
 
 
   
