--- a/views/personal-page.handlebars
+++ b/views/personal-page.handlebars
@@ -24,7 +24,7 @@
   </div>
   
 </div>
-<div class="d-flex flex-column bg-danger text-white mb-3 fs-5 m-5">
+<div class="d-flex flex-column bg-success bg-opacity-50 text-black mb-3 fs-5 m-5">
   <div class="text-center fw-bold fs-3 m-3">People that you like</div>
   
   <div class="d-flex flex-row d-flex justify-content-evenly px-3">
@@ -41,6 +41,7 @@
   </div>
 </div>
 <script src="/js/add-story.js"></script>
+<script src="/js/delete-hobby.js"></script>
 
 
   
