--- a/views/users-page.handlebars
+++ b/views/users-page.handlebars
@@ -6,7 +6,7 @@
   </div>
 
   <div class="col-8 d-flex flex-column align-items-center mb-3 mt-3">
-    <div id ="nameBtn" class="btn btn-warning rounded-pill text-black mb-3"><h2>{{user.name}}</h2></div>
+    <div id ="nameBtn" class="btn btn-info rounded-pill text-black mb-3"><h2>{{user.name}}</h2></div>
     <div>
       <p class="fw-bold text-black">What make me the most happiest</p>
     </div>
@@ -16,7 +16,7 @@
     
     <div id="story" class="d-none">
       <p class="fw-bold text-black">Something about me</p>
-      <p>{{user.story}}</p>
+      <p class="fs-5 m-5">{{user.story}}</p>
     </div>
   </div>
    
