--- a/views/personal-page.handlebars
+++ b/views/personal-page.handlebars
@@ -1,7 +1,7 @@
 {{>navbar}}
 <div class="d-flex flex-column flex-md-row justify-content-lg-center align-items-center rounded bg-danger text-white bg-opacity-50 p-2 fs-5">
   <div class="col-4 d-flex flex-column align-items-center">
-    <div id="user" class="m-2"><img src="{{user.image}}." alt="{{user.name}}" width= "200" height="250"></div>
+    <div id="user" class="m-2"><img src="{{user.image}}" alt="{{user.name}}" width= "200" height="250"></div>
     {{>addHobbies}}
   </div>
 
